--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Nobile:400,700);
+
 body {
-	margin: 0;
 	padding: 0;
+	margin: 0;
+	font-size: 16px;
+	font-family: 'Nobile', sans-serif;
+	box-sizing: border-box;
 }
