--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,13 @@ body {
   font-size: 16px;
   font-family: 'Nobile', sans-serif;
   box-sizing: border-box; }
+  body .title {
+    text-align: center; }
+    body .title h1 {
+      color: white;
+      /* Fallback: assume this color ON TOP of image */
+      background: url(../img/plain.jpg) no-repeat;
+      background-size: cover;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-size: 9em; }
