--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,4 +6,15 @@ body {
 	font-size: 16px;
 	font-family: 'Nobile', sans-serif;
 	box-sizing: border-box;
+	.title {
+	   text-align: center;
+		h1 {
+		   color: white;  /* Fallback: assume this color ON TOP of image */
+		   background: url(../img/plain.jpg) no-repeat;
+		   background-size: cover;
+		   -webkit-background-clip: text;
+		   -webkit-text-fill-color: transparent;
+		   font-size: 9em;
+		}
+	}
 }
