section class and title size

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body {
   font-size: 16px;
   font-family: 'Nobile', sans-serif;
   box-sizing: border-box; }
+  body .section {
+    height: 100vh; }
   body .title {
     text-align: center; }
     body .title h1 {
@@ -14,4 +16,4 @@ body {
       background-size: cover;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-size: 9em; }
+      font-size: 7em; }
