--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,6 +6,9 @@ body {
 	font-size: 16px;
 	font-family: 'Nobile', sans-serif;
 	box-sizing: border-box;
+	.section {
+		height: 100vh;
+	}
 	.title {
 	   text-align: center;
 		h1 {
@@ -14,7 +17,7 @@ body {
 		   background-size: cover;
 		   -webkit-background-clip: text;
 		   -webkit-text-fill-color: transparent;
-		   font-size: 9em;
+		   font-size: 7em;
 		}
 	}
 }
