about page progress

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,35 @@ body {
     text-align: center;
     color: #FFFFFF; }
     .splash.section .title h1 {
-      font-size: 6em;
+      font-size: 8em;
       color: white;
       /* Fallback: assume this color ON TOP of image */
       background: url(../img/plain.jpg) no-repeat;
       background-size: cover;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      margin: 0; }
+      margin: 0;
+      padding: 10px 0; }
+    .splash.section .title p {
+      color: #56BDBC; }
 
-.title {
+.about.section {
+  background-color: #E9F8F5;
+  background-image: url(../img/dust.png);
+  color: #353535;
+  padding: 30px 0;
   text-align: center; }
+  .about.section .container {
+    display: block;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 800px; }
+    .about.section .container .icon {
+      display: inline-block;
+      margin: 35px 50px; }
+      .about.section .container .icon img {
+        width: 130px; }
+  .about.section h1 {
+    padding-top: 15%;
+    margin: 0;
+    color: #1D63BD; }
