--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,12 +1,21 @@
 @import url(http://fonts.googleapis.com/css?family=Nobile:400,700);
 
+$light: #E9F8F5;
+$water: #1D63BD;
+$teal: #56BDBC;
+$orange: #FC611F;
+$red: #FC3225;
+$lime: #B9FD3E;
+$pink: #F83D70;
+$sky: #8DE9E3;
+$night: #353535;
+
 body {
 	padding: 0;
 	margin: 0;
 	font-size: 16px;
 	font-family: 'Nobile', sans-serif;
 }
-
 .section {
 	height: 100vh;
 }
@@ -18,22 +27,45 @@ body {
   -o-background-size: cover;
   background-size: cover;
   .title {
-  	padding-top: 20%;
+  	padding-top: 20%; 
   	text-align: center;
   	color: #FFFFFF;
   	h1 {
-			font-size: 6em;
+			font-size: 8em;
 			color: white;  /* Fallback: assume this color ON TOP of image */
 			background: url(../img/plain.jpg) no-repeat;
 			background-size: cover;
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			margin: 0;
+			padding: 10px 0;
 	 	}
+	 	p {color: $teal;}
   }
 }
 
-.title {
-   text-align: center;
-
+.about.section {
+	background-color: $light;
+	background-image: url(../img/dust.png);
+	color: $night;
+	padding: 30px 0;
+	text-align: center;
+	.container {
+		display: block;
+		margin: 0 auto;
+		width: 90%;
+		max-width: 800px;
+		.icon{
+		  display: inline-block;
+		  margin: 35px 50px;
+		  img {
+		  	width: 130px;
+		  }
+		}
+	}
+	h1 {
+		padding-top: 15%; 
+		margin: 0;
+		color: $water;
+	}
 }
