--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -62,6 +62,19 @@ body {
 		  	width: 130px;
 		  }
 		}
+	.start {
+		text-decoration: none;
+		background-color: $pink;
+		padding: 15px 30px;
+		color: $light;
+		border-radius: 3px;
+		font-size: 1.2em;
+		margin: 20px;
+		display: block;
+		max-width: 110px;
+		margin: 0 auto;
+		margin-top: 150px;
+	}
 	}
 	h1 {
 		padding-top: 15%; 
