--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,29 @@ body {
   font-family: 'Nobile', sans-serif; }
 
 .section {
-  height: 100vh; }
+  min-height: 100vh; }
+
+#logo {
+  width: 95%;
+  max-width: 1300px; }
 
 .splash.section {
   background: url(../img/bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: cover;
+  height: 100%; }
+  .splash.section .down-arrow {
+    border-radius: 50%;
+    border: 2px solid #FC611F;
+    color: #FC611F;
+    /* height: 1em; */
+    padding: 0 15px;
+    font-size: 3em;
+    text-decoration: none; }
   .splash.section .title {
-    padding-top: 20%;
+    padding-top: 13%;
     text-align: center;
     color: #FFFFFF; }
     .splash.section .title h1 {
@@ -36,7 +49,8 @@ body {
   background-image: url(../img/dust.png);
   color: #353535;
   padding: 30px 0;
-  text-align: center; }
+  text-align: center;
+  height: 100%; }
   .about.section .container {
     display: block;
     margin: 0 auto;
