--- a/css/styles.css
+++ b/css/styles.css
@@ -71,9 +71,18 @@ body {
       margin: 20px;
       display: block;
       max-width: 110px;
-      margin: 0 auto;
-      margin-top: 150px; }
+      margin: 100px auto; }
   .about.section h1 {
     padding-top: 15%;
     margin: 0;
     color: #1D63BD; }
+
+.list.section .title {
+  padding: 10px 0;
+  text-align: center;
+  color: #E9F8F5;
+  text-shadow: 2px 1px 2px #353535;
+  background: url(../img/banner_dark.jpg) no-repeat;
+  background-size: cover; }
+  .list.section .title h1 {
+    font-size: 2.5em; }
