--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -85,13 +85,26 @@ body {
 		margin: 20px;
 		display: block;
 		max-width: 110px;
-		margin: 0 auto;
-		margin-top: 150px;
+		margin: 100px auto;
 	}
 	}
 	h1 {
 		padding-top: 15%; 
 		margin: 0;
 		color: $water;
+	}
+}
+
+.list.section {
+	.title {
+		padding: 10px 0;
+		text-align: center;
+		color: $light;
+		text-shadow: 2px 1px 2px $night;
+		background: url(../img/banner_dark.jpg) no-repeat;
+		background-size: cover;
+		h1 {
+			font-size: 2.5em;
+		}
 	}
 }
