--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -100,17 +100,35 @@ body {
 	ul {
 		list-style: none;
   	li {
-  		padding: 15px;
-  		width: 180px;
+		  text-align: left;
+		  width: 180px;
   		display: inline-block;
   		vertical-align: top;
-  		background-color: $sky;
+  		background-color: #FFFFFF;
   		font-weight: bold;
+  		height: 310px;
+  		h3 {text-align: center;}
   		p {
   			font-weight: normal;
+  			margin-left: 10px;
+  			margin-right: 10px;
+  			font-size: 0.8em;
   		}
   	}
 	}
+	#apps {background-color: $water; padding: 10px 0; margin-top: 0;}
+	.apps-list {border: 1px solid $water;}
+	#web-tools {background-color: $teal; padding: 10px 0; margin-top: 0;}
+	.web-tools-list {border: 1px solid $teal;}
+	#packages {background-color: $red; padding: 10px 0; margin-top: 0;}
+	.packages-list {border: 1px solid $red;}
+	#terminal {background-color: $sky; padding: 10px 0; margin-top: 0;}
+	.terminal-list {border: 1px solid $sky;}
+	#visual {background-color: $lime; padding: 10px 0; margin-top: 0;}
+	.visual-list {border: 1px solid $lime;}
+	#tech-stack {background-color: $pink; padding: 10px 0; margin-top: 0;}
+	.tech-stack-list {border: 1px solid $pink;}
+
 	.container {
 		margin-top: 50px;
 	}
