--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -39,7 +39,7 @@ body {
 	  text-decoration: none;
   }
   .title {
-  	padding-top: 13%; 
+  	padding-top: 15%; 
   	text-align: center;
   	color: #FFFFFF;
   	h1 {
@@ -99,6 +99,7 @@ body {
 	text-align: center;
 	ul {
 		list-style: none;
+		padding-left: 0;
   	li {
 		  text-align: left;
 		  width: 180px;
@@ -107,6 +108,7 @@ body {
   		background-color: #FFFFFF;
   		font-weight: bold;
   		height: 310px;
+  		margin-bottom: 20px;
   		h3 {text-align: center;}
   		p {
   			font-weight: normal;
@@ -117,17 +119,17 @@ body {
   	}
 	}
 	#apps {background-color: $water; padding: 10px 0; margin-top: 0;}
-	.apps-list {border: 1px solid $water;}
+	.apps-list {border: 3px solid $water;}
 	#web-tools {background-color: $teal; padding: 10px 0; margin-top: 0;}
-	.web-tools-list {border: 1px solid $teal;}
+	.web-tools-list {border: 3px solid $teal;}
 	#packages {background-color: $red; padding: 10px 0; margin-top: 0;}
-	.packages-list {border: 1px solid $red;}
+	.packages-list {border: 3px solid $red;}
 	#terminal {background-color: $sky; padding: 10px 0; margin-top: 0;}
-	.terminal-list {border: 1px solid $sky;}
+	.terminal-list {border: 3px solid $sky;}
 	#visual {background-color: $lime; padding: 10px 0; margin-top: 0;}
-	.visual-list {border: 1px solid $lime;}
+	.visual-list {border: 3px solid $lime;}
 	#tech-stack {background-color: $pink; padding: 10px 0; margin-top: 0;}
-	.tech-stack-list {border: 1px solid $pink;}
+	.tech-stack-list {border: 3px solid $pink;}
 
 	.container {
 		margin-top: 50px;
