--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,11 +4,12 @@ $light: #E9F8F5;
 $water: #1D63BD;
 $teal: #56BDBC;
 $orange: #FC611F;
-$red: #FC3225;
-$lime: #B9FD3E;
+$red: #F3373A;
+$lime: #38ED71;
 $pink: #F83D70;
 $sky: #8DE9E3;
 $night: #353535;
+$white: #FFFFFF;
 
 body {
 	padding: 0;
@@ -41,10 +42,10 @@ body {
   .title {
   	padding-top: 15%; 
   	text-align: center;
-  	color: #FFFFFF;
+  	color: $white;
   	h1 {
 			font-size: 8em;
-			color: white;  /* Fallback: assume this color ON TOP of image */
+			color: $white;
 			background: url(../img/plain.jpg) no-repeat;
 			background-size: cover;
 			-webkit-background-clip: text;
@@ -105,31 +106,73 @@ body {
 		  width: 180px;
   		display: inline-block;
   		vertical-align: top;
-  		background-color: #FFFFFF;
+  		background-color: #FAFFFF;
   		font-weight: bold;
-  		height: 310px;
-  		margin-bottom: 20px;
+  		min-height: 260px;
+  		margin: 20px 10px;
   		h3 {text-align: center;}
   		p {
   			font-weight: normal;
   			margin-left: 10px;
   			margin-right: 10px;
   			font-size: 0.8em;
+  			a, a:visited {
+  				text-decoration: none;
+  				color: inherit;
+  			}
   		}
+  		p:hover {
+			  font-style: italic;
+			  font-weight: bolder !important;
+			  cursor: pointer;
+			  color: $pink;
+			  border-bottom: 1px solid $teal;
+			  /* text-decoration: underline; */
+			}
   	}
 	}
-	#apps {background-color: $water; padding: 10px 0; margin-top: 0;}
-	.apps-list {border: 3px solid $water;}
-	#web-tools {background-color: $teal; padding: 10px 0; margin-top: 0;}
-	.web-tools-list {border: 3px solid $teal;}
-	#packages {background-color: $red; padding: 10px 0; margin-top: 0;}
-	.packages-list {border: 3px solid $red;}
-	#terminal {background-color: $sky; padding: 10px 0; margin-top: 0;}
-	.terminal-list {border: 3px solid $sky;}
-	#visual {background-color: $lime; padding: 10px 0; margin-top: 0;}
-	.visual-list {border: 3px solid $lime;}
-	#tech-stack {background-color: $pink; padding: 10px 0; margin-top: 0;}
-	.tech-stack-list {border: 3px solid $pink;}
+	#apps {
+		background-color: $water; 
+		padding: 10px 0; margin-top: 0;
+	}
+	.apps-list {
+		border: 3px solid $water;
+	}
+	#web-tools {
+		background-color: $teal; 
+		padding: 10px 0; margin-top: 0;
+	}
+	.web-tools-list {
+		border: 3px solid $teal;
+	}
+	#packages {
+		background-color: $lime; 
+		padding: 10px 0; margin-top: 0;
+	}
+	.packages-list {
+		border: 3px solid $lime;
+	}
+	#terminal {
+		background-color: $pink; 
+		padding: 10px 0; margin-top: 0;
+	}
+	.terminal-list {
+		border: 3px solid $pink;
+	}
+	#visual {
+		background-color: $red; 
+		padding: 10px 0; margin-top: 0;
+	}
+	.visual-list {
+		border: 3px solid $red;
+	}
+	#tech-stack {
+		background-color: $orange; 
+		padding: 10px 0; margin-top: 0;
+	}
+	.tech-stack-list {
+		border: 3px solid $orange;
+	}
 
 	.container {
 		margin-top: 50px;
@@ -137,7 +180,7 @@ body {
 	.title {
 		padding: 10px 0;
 		text-align: center;
-		color: $light;
+		color: $white;
 		text-shadow: 2px 1px 2px $night;
 		background: url(../img/banner_dark.jpg) no-repeat;
 		background-size: cover;
@@ -170,7 +213,7 @@ ________________________________*/
 	text-align: left; 
 	padding: 30px 80px;
 	margin-top: 80px;
-	color: white;
+	color: $white;
 }
 
 .footer-distributed .footer-left,
