--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ body {
     background: url(../img/banner_dark.jpg) no-repeat;
     background-size: cover; }
     .list.section .title h1 {
-      font-size: 2.5em; }
+      font-size: 2.25em; }
 
 /* Footer
 ________________________________*/
@@ -169,7 +169,7 @@ ________________________________*/
   text-align: center; }
 
 .footer-distributed {
-  background-color: #1F4770;
+  background-color: #353535;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   width: 100%;
@@ -309,3 +309,11 @@ ________________________________*/
     margin-left: 0; }
   .footer-center p {
     margin-top: 20px !important; } }
+
+@media (max-width: 400px) {
+  .list.section ul li {
+    width: 90%; }
+  .about.section .container .icon {
+    margin: 35px 15px; }
+  .about.section .container .icon img {
+    width: 60px; } }
