link structure in place

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -391,4 +391,5 @@ ________________________________*/
 	.list.section ul li {width: 90%;}
 	.about.section .container .icon {  margin: 35px 15px;}
 	.about.section .container .icon img {width: 60px;}
+	.splash.section .title {padding-top: 50%;}	
 }
