--- a/css/styles.css
+++ b/css/styles.css
@@ -316,4 +316,6 @@ ________________________________*/
   .about.section .container .icon {
     margin: 35px 15px; }
   .about.section .container .icon img {
-    width: 60px; } }
+    width: 60px; }
+  .splash.section .title {
+    padding-top: 50%; } }
