--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,8 @@ body {
   height: 100%; }
   .splash.section .down-arrow {
     border-radius: 50%;
-    border: 2px solid #FC611F;
-    color: #FC611F;
+    border: 2px solid #F83D70;
+    color: #F83D70;
     /* height: 1em; */
     padding: 0 15px;
     font-size: 3em;
