--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -32,8 +32,8 @@ body {
   height: 100%;
   .down-arrow {
 	  border-radius: 50%;
-	  border: 2px solid $orange;
-	  color: $orange;
+	  border: 2px solid $pink;
+	  color: $pink;
 	  /* height: 1em; */
 	  padding: 0 15px;
 	  font-size: 3em;
