--- a/css/styles.css
+++ b/css/styles.css
@@ -47,17 +47,20 @@ body {
   color: #353535;
   padding: 30px 0;
   text-align: center;
-  height: 100%; }
+  height: 100%;
+  line-height: 1.5em; }
   .about.section .container {
     display: block;
     margin: 0 auto;
     width: 90%;
     max-width: 800px; }
+    .about.section .container p {
+      line-height: 1.5em; }
     .about.section .container .icon {
       display: inline-block;
       margin: 35px 30px; }
       .about.section .container .icon img {
-        width: 130px; }
+        width: 80px; }
     .about.section .container .start {
       text-decoration: none;
       background-color: #F83D70;
@@ -72,20 +75,14 @@ body {
   .about.section h1 {
     padding-top: 15%;
     margin: 0;
-    color: #1D63BD; }
+    color: #1D63BD;
+    line-height: 2em; }
 
 .list.section {
-  text-align: center; 
-  background: url(../img/clouds.png) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+  text-align: center; }
   .list.section ul {
     list-style: none;
-    padding-left: 0; 
-    margin-bottom: 0;}
+    padding-left: 0; }
     .list.section ul li {
       text-align: left;
       width: 180px;
@@ -94,9 +91,7 @@ body {
       background-color: #FAFFFF;
       font-weight: bold;
       min-height: 260px;
-      margin: 20px 10px; 
-      border-radius: 3px;
-    }
+      margin: 20px 10px; }
       .list.section ul li h3 {
         text-align: center; }
       .list.section ul li p {
@@ -182,6 +177,7 @@ ________________________________*/
   width: 100%;
   text-align: left;
   padding: 30px 80px;
+  margin-top: 80px;
   color: #FFFFFF; }
 
 .footer-distributed .footer-left,
